--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
 body {
     background-color: lightgray;
 }
+h1  {
+    color: lightseagreen;
+    font-family: 'Merriweather', serif;
+}
+.btn-primary {
+    background-color: lightseagreen;
+}
+.navbar-brand {
+    background-color: lightseagreen;
+    font-family: 'Merriweather', serif;
+}
+.container {
+    padding: 30px;
+    margin: 10px;
+}
+.navbar {
+    margin-bottom: 50px;
+}
